Fixed dark mode for textbox, combobox, and fields

--- a/src/less/combobox/base/combobox.less
+++ b/src/less/combobox/base/combobox.less
@@ -121,8 +121,8 @@ span.combobox {
 
     &[disabled],
     &[aria-disabled="true"] {
-        border-color: @combobox-disabled-border-color;
-        color: @combobox-disabled-foreground-color;
+        .customBorderColorProperty(combobox-disabled-border-color);
+        .customColorProperty(combobox-disabled-foreground-color);
 
         &[readonly] {
             text-shadow: 0 0 0 @combobox-disabled-foreground-color;
@@ -134,7 +134,7 @@ span.combobox {
     }
 
     &[aria-invalid="true"] {
-        border-color: @combobox-invalid-foreground-color;
+        .customBorderColorProperty(combobox-invalid-foreground-color);
     }
 
     &::-ms-clear {
@@ -174,7 +174,7 @@ span.combobox {
 }
 
 .combobox__control > input[disabled] {
-    background-color: @combobox-disabled-background-color;
+    .customBackgroundColorProperty(combobox-disabled-background-color);
 }
 
 .combobox__option--active[role="option"] {
