--- a/src/less/properties/ds6/combobox-properties.less
+++ b/src/less/properties/ds6/combobox-properties.less
@@ -7,10 +7,20 @@
 @media (prefers-color-scheme: dark) {
     .skin-experiment-dark-mode {
         .combobox {
-            --combobox-background-color: @color-black-dark-mode;
-            --combobox-foreground-color: @color-text-default-dark-mode;
-            --combobox-disabled-background-color: @color-black-dark-mode;
-            --combobox-disabled-foreground-color: @color-text-default-dark-mode;
+            --combobox-background-color: @color-grey2-dark-mode;
+            --combobox-foreground-color: @color-grey7-dark-mode;
+            --combobox-border-color: @color-grey4-dark-mode;
+            --combobox-focus-border-color: @color-b4-dark-mode;
+            --combobox-focus-background-color: @color-black-dark-mode;
+            --combobox-disabled-background-color: @color-grey2-dark-mode;
+            --combobox-disabled-foreground-color: @color-grey4-dark-mode;
+            --combobox-disabled-border-color: @color-grey4-dark-mode;
+            --combobox-disabled-placeholder-color: @color-grey4-dark-mode;
+            --combobox-readonly-foreground-color: @color-grey4-dark-mode;
+            --combobox-focus-placeholder-color: @color-grey6-dark-mode;
+            --combobox-invalid-foreground-color: @color-r4-dark-mode;
+            --combobox-invalid-background-color: @color-textbox-invalid-dark-mode;
+            --combobox-icon-color: @color-grey6-dark-mode;
             --dropdown-items-background-color: @color-black-dark-mode;
             --dropdown-item-foreground-color: @color-text-default-dark-mode;
             --dropdown-item-border-color: @color-black-dark-mode;
