--- a/src/less/properties/ds6/select-properties.less
+++ b/src/less/properties/ds6/select-properties.less
@@ -7,9 +7,17 @@
 @media (prefers-color-scheme: dark) {
     .skin-experiment-dark-mode {
         .select {
-            --select-background-color: @color-black-dark-mode;
-            --select-foreground-color: @color-text-default-dark-mode;
+            --select-background-color: @color-grey2-dark-mode;
+            --select-border-color: @color-grey4-dark-mode;
+            --select-foreground-color: @color-grey7-dark-mode;
             --select-focus-border-color: @color-b4-dark-mode;
+            --select-disabled-foreground-color: @color-grey4-dark-mode;
+            --select-disabled-background-color: @color-grey2-dark-mode;
+            --select-borderless-disabled-foreground-color: @color-grey4-dark-mode;
+            --select-borderless-disabled-background-color: @color-grey2-dark-mode;
+            --select-invalid-border-color: @color-r4-dark-mode;
+            --select-invalid-background-color: @color-textbox-invalid-dark-mode;
+            --select-invalid-foreground-color: @color-r4-dark-mode;
         }
     }
 }
